--- a/public/views/settings/recommenderSettings.html
+++ b/public/views/settings/recommenderSettings.html
@@ -24,8 +24,8 @@
         <div id="page-wrapper">		
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#/settings">Recommender settings</a></li>
-                <li><a data-toggle="tab" href="#/settings/staticItemSettings">Static item settings</a></li>
-                <li><a data-toggle="tab" href="#/settings/dynamicItemSettings">Dynamic item settings</a></li>
+                <li><a data-toggle="tab" href="#/settings/staticItemSettings">Static item types</a></li>
+                <li><a data-toggle="tab" href="#/settings/dynamicItemSettings">Dynamic item types</a></li>
             </ul>
             
             <div class="panel-body">
