--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -108,50 +108,62 @@
                                 <div class="col-xs-6">
                                     </br>
                                     <label>Lower right corner: latitude</label>
-                                    <input id="initPosLat" class="form-control"  disabled/>
+                                    <input id="endPosLat" class="form-control"  disabled/>
                                 </div>
 
                                 <div class="col-xs-6">
                                     </br>
                                     <label>Lower right corner: longitude</label>
-                                     <input id="initPosLong" class="form-control" disabled/>
+                                     <input id="endPosLong" class="form-control" disabled/>
                                 </div>                
 
                                 <div class="col-xs-6">
                                     <div class="radio">
-                                      <label>
                                         <input type="radio" name="opciones" id="upperLeftCorner" value="upperLeftCorner" checked>
                                         select upper left corner
-                                      </label>
+                                        </input>
                                     </div>
                                 </div>
 
                                 <div class="col-xs-6">
                                     <div class="radio">
-                                      <label>
                                         <input type="radio" name="opciones" id="lowerRightCorner" value="lowerRightCorner">
                                         select lower right corner
-                                      </label>
+                                        </input>
                                     </div>                                    
                                 </div>
 
-                                <div class="col-xs-12">       
+                                <div class="col-xs-6">       
                                     </br>         
                                     <label>City</label>  
                                     <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Search for...">
+                                        <input ng-model="citySearchValue" type="text" class="form-control" placeholder="Search for...">
                                         <span class="input-group-btn">
-                                            <button class="btn btn-default" type="button">Go!</button>
+                                            <button class="btn btn-default" type="button" ng-click="citySearch()">Go!</button>
                                         </span>
                                     </div>
+                                </div>
+
+                                <div ng-hide="cityList.length==0" class="col-xs-6">
+                                    </br>
+                                    <label>Places: </label>    
+                                    <select ng-model="selectedCity" name="selectedCity" class="form-control">
+                                        <option ng-repeat="city in cityList" value={{city}}>{{city.display_name}}</option>
+                                    </select>
                                 </div>
 
                                 <div class="col-xs-12"> 
                                     <br/>
                                     <div id="crearMapa" >
                                     </div>
-
-                                    <script type="text/javascript">               
+                                    
+                                    <script type="text/javascript">
+                                        $("select[name=selectedCity]").change(function(){
+                                            var searchCitySelected = $("select[name=selectedCity]").val();
+                                            searchCitySelected = JSON.parse(searchCitySelected);
+                                            map.setCenter(ol.proj.transform([searchCitySelected.lon, searchCitySelected.lat], 'EPSG:4326', 'EPSG:3857'));
+                                        });
+                                        
                                         var map = new ol.Map({
                                             target: 'crearMapa',
                                             layers: [
@@ -166,13 +178,24 @@
                                             controls: ol.control.defaults().extend([      
                                                 new ol.control.FullScreen() 
                                             ])        
-                                        });          
+                                        });
 
                                         map.on('singleclick', function(evt) { 
-                                            $('#initPosLat').val(evt.coordinate[0]);
-                                            $('#initPosLong').val(evt.coordinate[1]);
+                                            var corner = $('input[name=opciones]:checked').val()
+                                            var pos = ol.proj.transform(evt.coordinate,'EPSG:3857', 'EPSG:4326');
+                                            
+                                            if(corner == "upperLeftCorner"){
+                                                $('#initPosLat').val(pos[0]);
+                                                $('#initPosLong').val(pos[1]);
+                                            }else if(corner == "lowerRightCorner"){
+                                                $('#endPosLat').val(pos[0]);
+                                                $('#endPosLong').val(pos[1]);
+                                            }else{
+                                                alert("Invalid option");
+                                            }
                                         });
-                                    </script>                                
+                                    </script>    
+                                    
                                 </div>                                    
                             </div>                            
 
