--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -49,7 +49,14 @@
                                     element: $('<img src="images/yo.jpg" class="img-circle">')
                                     .css({marginTop: '-50%', marginLeft: '-50%', width: '40px', height: '40px', cursor: 'pointer'})
                                     .tooltip({title: 'Hello, world!', trigger: 'click'})
-                                }));    
+                                }));
+                                
+                                alert(ol.proj.transform(evt.coordinate,'EPSG:3857', 'EPSG:4326'));
+                                
+                                
+                                alert(pos);
+                              
+                                
                             });        
                             /*var exportPNGElement = document.getElementById('export-png');
                             if ('download' in exportPNGElement) {
